# spacewars

./: .gitignore  Cargo.toml  Makefile.toml  README.md  credits.txt
assets/textures/ships/: ship-001.ron
book/: book.toml
book/src/: SUMMARY.md  design.md  introduction.md  tut0.md
book/src/tut0/: content-style-guide.md  requirements.md
resources/: bindings.run  display_config.ron
resources/config/: bindings.ron  display_config.ron
resources/packaging/: Spacewars.desktop
resources/prefab/: torpedo.ron
resources/textures/: controls.ron  logo.ron
resources/textures/backgrounds/: background-2.ron  background-test.ron  background.ron  gravity-well.ron
resources/textures/particles/: debris.ron  particle0.ron
src/: bundle.rs  components.rs  main.rs  state.rs
src/entities/: torpedo.rs
src/resources/: assets.rs  audio.rs  collision.rs  damage.rs  debris.rs  explosions.rs  game.rs  math.rs  mod.rs  particle.rs  player.rs  prefabs.rs  ui.rs
src/states/: credits.rs  loading.rs  menu.rs  mod.rs  pause.rs  spacewars.rs
src/systems/: audio.rs  collision.rs  damage.rs  energy.rs  explosion.rs  input.rs  mod.rs  particle.rs  physics.rs  player.rs  railgun.rs  ship.rs  torpedo.rs  ui.rs
