[package]
name = "spacewars"
version = "1.0.0"
authors = ["David Pascoe-Deslauriers <dpascoed@coldfrontlabs.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

amethyst = { version = "0.14", features = ["vulkan"] }
amethyst_rendy = { features = ["no-slow-safety-checks"] }
log = { version = "0.4", features = ["serde"] }
rand = "0.7"

# shred = {features=["nightly"]}

[profile.dev]
debug = 1

[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"