[package]
name = "spacewars"
version = "1.0.0"
authors = ["David Pascoe-Deslauriers <dpascoed@coldfrontlabs.ca>"]
edition = "2018"

build = "build.rs"

[dependencies]

amethyst = { version = "0.14", features = ["vulkan", "sdl_controller"] }
amethyst_rendy = { features = ["no-slow-safety-checks"] }
log = { version = "0.4", features = ["serde"] }
rand = "0.7"

# shred = {features=["nightly"]}

[profile.dev]
debug = 1

